#17691 Bug fix - static form control text overflow
Remove height attribute to avoid long text overflowing when using
form-group lg and sm with form-control-static.

--- a/less/forms.less
+++ b/less/forms.less
@@ -331,7 +331,6 @@ input[type="checkbox"] {
 }
 .form-group-sm {
   .form-control {
-    height: @input-height-small;
     padding: @padding-small-vertical @padding-small-horizontal;
     font-size: @font-size-small;
     line-height: @line-height-small;
@@ -374,7 +373,6 @@ input[type="checkbox"] {
     height: auto;
   }
   .form-control-static {
-    height: @input-height-large;
     min-height: (@line-height-computed + @font-size-large);
     padding: (@padding-large-vertical + 1) @padding-large-horizontal;
     font-size: @font-size-large;
